# PiLNK

./: .gitignore  99-pilnk-sdr.rules  CLAUDE.md  CNAME  PiLNK-app-index.html  SOP-github-push.md  VERSION  app.py  audio.py  bootstrap-selfheal.sh  build-overlay-nz.py  check-dongles.sh  index (1).html  index.html  install-service.sh  install.sh  mil_catalog_seed.json  phase2-engine-install.sh  pi_index.html  pilnk-app-index (1).html  pilnk-app-index.html  pilnk-camera-popup.html  pilnk-radio-watchdog.sh  pilnk-sdr-recover.service  pilnk-sdr-recover.timer  pilnk.service  pilnkradio-install.sh  radio.py  refresh-aircraft-db.sh  sdr-recover.sh  sdr_controller.py  update.sh  whisper_atc.py
hardening/: README.md  pilnk-radio-watchdog.service  pilnk-radio-watchdog.sh
pilnk_bridge/: CMakeLists.txt  README.md
pilnk_bridge/src/: main.cpp
pilnkradio/: 99-pilnk-v4.rules  CMakeLists.txt  README.md  config.example.json  main.cpp  pilnkradio.service
static/mil-types/: _sources.json
templates/: index.html
tools/: controller-watch.service  controller_watch.py
